separated markov sources

--- a/markov/CMakeLists.txt
+++ b/markov/CMakeLists.txt
@@ -1,8 +1,14 @@
 cmake_minimum_required(VERSION 2.8)
 
 project(markov)
-set (CMAKE_CXX_STANDARD 11)
+set (CMAKE_CXX_STANDARD 14)
 
-add_executable(${PROJECT_NAME} "main.cpp")
+
+file(GLOB markov_SRC
+    "*.h"
+    "*.cpp"
+)
+
+add_executable(${PROJECT_NAME} ${markov_SRC})
 
 
